examples/type_system/failing/83_match_guarded_wildcard_only_non_exhaustive.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E015: Guarded wildcard is not an unconditional catch-all.
let n = 2;

match n {
    _ if n > 0 -> 1
};
